# datum-demo-v3

./: .gitignore  README.md  config.sample.yaml  config_sample.json  mainnet-c3-networks.yaml  preprod-c3-networks.yaml  pyproject.toml
network-feed/: charli3_network_info_reader.py  main.py
network_feed_demo/: charli3_network_info_reader.py  datums.py  main.py
